MDK-ARM/.vscode/uv4.log
*** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Users\liuch\AppData\Local\Keil_v5\ARM\ARMCC\Bin'
Rebuild target 'R1_LightBoard_V3'
assembling startup_stm32g474xx.s...
compiling stm32g4xx_hal_fdcan.c...
compiling gpio.c...
compiling stm32g4xx_hal_msp.c...
compiling dma.c...
compiling fdcan.c...
compiling stm32g4xx_hal_flash_ex.c...
compiling stm32g4xx_it.c...
compiling usart.c...
compiling stm32g4xx_hal_rcc_ex.c...
compiling stm32g4xx_hal_flash.c...
compiling stm32g4xx_hal.c...
compiling tim.c...
compiling main.c...
compiling stm32g4xx_hal_flash_ramfunc.c...
compiling stm32g4xx_hal_rcc.c...
compiling WS2812.c...
..\Project\WS2812\WS2812.c(305): warning:  #1182-D: a declaration cannot have a label
  		uint8_t leds[] = {16, 17, 18, 22, 23, 24};
..\Project\WS2812\WS2812.c(318): warning:  #1182-D: a declaration cannot have a label
  		uint8_t leds[] = {16, 17, 18, 22, 23, 24};
..\Project\WS2812\WS2812.c(318): error:  #101: "leds" has already been declared in the current scope
  		uint8_t leds[] = {16, 17, 18, 22, 23, 24};
..\Project\WS2812\WS2812.c(333): warning:  #1-D: last line of file ends without a newline
  }
..\Project\WS2812\WS2812.c(259): warning:  #546-D: transfer of control bypasses initialization of:
            variable "leds"  (declared at line 305)
            variable "leds"  (declared at line 318)
  	switch (Now_Event)
  	^
..\Project\WS2812\WS2812.c: 4 warnings, 1 error
compiling stm32g4xx_hal_exti.c...
compiling system_stm32g4xx.c...
compiling stm32g4xx_hal_gpio.c...
compiling stm32g4xx_hal_cortex.c...
compiling stm32g4xx_hal_dma_ex.c...
compiling stm32g4xx_hal_tim_ex.c...
compiling stm32g4xx_hal_uart_ex.c...
compiling HeartBeat.c...
..\Project\HeartBeat\HeartBeat.c(24): warning:  #175-D: subscript out of range
          Event_Flag[3] = 0;Event_Flag[4] = 0;
..\Project\HeartBeat\HeartBeat.c: 1 warning, 0 errors
compiling Key_bsp.c...
compiling stm32g4xx_hal_pwr_ex.c...
compiling stm32g4xx_hal_dma.c...
compiling stm32g4xx_hal_pwr.c...
compiling stm32g4xx_hal_uart.c...
compiling Color.c...
compiling FDcan_bsp.c...
compiling stm32g4xx_hal_tim.c...
"R1_LightBoard_V3\R1_LightBoard_V3.axf" - 1 Error(s), 5 Warning(s).
Target not created.
Build Time Elapsed:  00:00:29
